--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </text>
 	<text fill='#2C68F7' font-size='30' id='txtnotover'
         dominant-baseline='auto'
-        x='50%' text-anchor='middle' style='display:block;' onmouseover='var element=document.getElementById("txtnotover");element.style.display="none";var noelement=document.getElementById("txtover");noelement.style.display="block";' onmouseout='var element=document.getElementById("txtnotover");element.style.display="block";var noelement=document.getElementById("txtover");noelement.style.display="none";'>
+        x='50%' text-anchor='middle' style='display:block;' onmouseover='this.style.display="none";var noelement=document.getElementById("txtover");noelement.style.display="block";' onmouseout='this.style.display="block";var noelement=document.getElementById("txtover");noelement.style.display="none";'>
       <textPath xlink:href='#path1'>
         Hi,I'm Bing xiu~
       </textPath>
